--- a/force-app/main/default/classes/GiveWPDonationService.cls
+++ b/force-app/main/default/classes/GiveWPDonationService.cls
@@ -3,100 +3,59 @@
  */
 
 global class GiveWPDonationService {
-    @InvocableMethod(Label='Process Donations' Description='Processes donations pulled from the GiveWP WordPress extension')
-    global static List<Donation> getDonations() {
+    @InvocableMethod(Label='Get Donations' Description='Pulls donations from the GiveWP WordPress extension' Category='Custom')
+    global static List<List<Donation>> getDonations(List<List<DonationParameter>> parameters) {
         SwagDefaultApi api = new SwagDefaultApi();
 
         Map<String, Object> params = new Map<String, Object>{
-                'r_number' => '"50"',
-                'key' => '"f9a7930c7009cb8aefa17246278dcbfb"',
-                'token' => '"17c5722a8992a0a7d373d58aea5d9150"',
-                'r_date' => '"yesterday"'
+                'key' => parameters[0][0].key,
+                'token' => parameters[0][0].token,
+                //'r_date' => 'yesterday'
+                'r_number' => '25'
         };
 
-        SwagModel0 result;
-        try {
-            // cross your fingers
-            result = api.giveApiDonationsGet(params);
-            System.debug(result);
-        } catch (Swagger.ApiException e) {
-            // ...handle your exceptions
-        }
+        SwagModel0 result = api.giveApiDonationsGet(params);
 
-        return new List<Donation>();
+        List<Donation> donations = new List<Donation>();
+        for (SwagDonations swagDontation : result.donations) {
+            if(swagDontation.status == 'Complete') {
+                donations.add(buildDonationFromSwagDonation(swagDontation));
+            }
+        }
+        List<List<Donation>> returnList = new List<List<Donation>>();
+        returnList.add(donations);
+        return returnList;
     }
 
-    global class Donation {
-        @InvocableVariable(required=true)
-        global Integer giveId;
-
-        @InvocableVariable
-        global String status;
-
-        @InvocableVariable
-        global String name;
-
-        @InvocableVariable
-        global String firstName;
-
-        @InvocableVariable
-        global String lastName;
-
-        @InvocableVariable
-        global String email;
-
-        @InvocableVariable
-        global String giveDate;
-
-        @InvocableVariable
-        global String billingFirstName;
-
-        @InvocableVariable
-        global String billingLastName;
-
-        @InvocableVariable
-        global String billingAddress1;
-
-        @InvocableVariable
-        global String billingAddress2;
-
-        @InvocableVariable
-        global String billingCity;
-
-        @InvocableVariable
-        global String billingState;
-
-        @InvocableVariable
-        global String billingZip;
-
-        @InvocableVariable
-        global String billingCountry;
-
-        @InvocableVariable
-        global Integer donorId;
-
-        @InvocableVariable
-        global Boolean isDonationRecurring;
-
-        @InvocableVariable
-        global Double donationAmount;
-
-        @InvocableVariable
-        global String feeAmount;
-
-        @InvocableVariable
-        global Integer formId;
-
-        @InvocableVariable
-        global String formName;
-
-        @InvocableVariable
-        global String formPrice;
-
-        @InvocableVariable
-        global String formPriceName;
-
-        @InvocableVariable
-        global String formPriceId;
+    private static Donation buildDonationFromSwagDonation(SwagDonations swagDonation) {
+        Donation donation = new Donation();
+        donation.giveId = swagDonation.ID;
+        donation.status = swagDonation.status;
+        donation.name = swagDonation.name;
+        donation.firstName = swagDonation.fname;
+        donation.lastName = swagDonation.lname;
+        donation.email = swagDonation.email;
+        donation.giveDate = Datetime.valueOf(swagDonation.r_date);
+        donation.billingFirstName = swagDonation.payment_meta ?.giveDonorBillingFirstName;
+        donation.billingLastName = swagDonation.payment_meta ?.giveDonorBillingLastName;
+        donation.billingAddress1 = swagDonation.payment_meta ?.giveDonorBillingAddress1;
+        donation.billingAddress2 = swagDonation.payment_meta ?.giveDonorBillingAddress2;
+        donation.billingCity = swagDonation.payment_meta ?.giveDonorBillingCity;
+        donation.billingState = swagDonation.payment_meta ?.giveDonorBillingState;
+        donation.billingZip = swagDonation.payment_meta ?.giveDonorBillingZip;
+        donation.billingCountry = swagDonation.payment_meta ?.giveDonorBillingCountry;
+        donation.donorId = swagDonation.payment_meta ?.givePaymentDonorId;
+        donation.isDonationRecurring = swagDonation.payment_meta ?.giveIsDonationRecurring == '0' ? false : true;
+        donation.totalAmount = swagDonation.total;
+        donation.donationAmount = swagDonation.payment_meta ?.giveFeeDonationAmount;
+        donation.feeAmount = swagDonation.payment_meta ?.giveFeeAmount;
+        donation.artsOrganizationIfApplicable = swagDonation.payment_meta?.artsOrganizationIfApplicable;
+        donation.giveCurrentUrl = swagDonation.payment_meta?.giveCurrentUrl;
+        donation.formId = swagDonation.form?.id;
+        donation.formName = swagDonation.form?.name;
+        donation.formPrice = swagDonation.form?.price;
+        donation.formPriceName = swagDonation.form?.price_name;
+        donation.formPriceId = swagDonation.form?.price_id;
+        return donation;
     }
 }
